--- a/src/Client/Shared/NavMenu.razor
+++ b/src/Client/Shared/NavMenu.razor
@@ -16,12 +16,20 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="catalog" Match="NavLinkMatch.All">
-                <span class="oi oi-book" aria-hidden="true"></span> Catalog of Books
+                <span class="oi oi-book" aria-hidden="true"></span> Catalog
             </NavLink>
         </div>
+        <AuthorizeView Roles="Administrator">
+            <Authorized>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="administrator" Match="NavLinkMatch.All">
+                    <span class="oi oi-badge" aria-hidden="true"></span> Admin page
+                </NavLink>
+            </div>
+            </Authorized>
+        </AuthorizeView>
     </nav>
 </div>
-
 
 @code {
     private bool collapseNavMenu = true;
